kubernetes/infrastructure/cilium-policies/base/allow-kube-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-apiserver
spec:
  description: "Allow all pods to reach the Kubernetes API server"
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
